syntax = "proto3";

package go.micro.srv.GetUserHouses;

service GetUserHouses {
    rpc Call (Request) returns (Response) {
    }
}

message Message {
    string say = 1;
}

message Request {
    string SessionID = 1;
}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    bytes Mix = 3;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
